[package]
name = "llm-workflow"
version = "0.1.0"
edition = "2021"
description = "Type-safe, async workflow primitives for LLM pipelines"
license = "MIT OR Apache-2.0"
repository = "https://github.com/noahbclarkson/llm-workflow"
keywords = ["llm", "workflow", "pipeline", "async", "ai"]
categories = ["asynchronous", "science::ml"]
readme = "README.md"

[dependencies]
async-trait = "0.1"
futures = "0.3"
tokio = { version = "1", features = ["sync", "rt", "macros"] }
thiserror = "1"
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }

[features]
default = []

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tokio-test = "0.4"
